--- a/res/layout/main_top_image_layout.xml
+++ b/res/layout/main_top_image_layout.xml
@@ -14,6 +14,17 @@
         android:background="@null"
         android:layout_marginLeft="10dp"
         />
+    
+    <ImageButton
+        android:id="@+id/main_top_left1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="@dimen/dimen_normal"
+        android:src="@drawable/btn_gobackl"
+        android:background="@null"
+        android:padding="10dp"
+        tools:ignore="ContentDescription" />
 
     
     <TextView
