--- a/res/layout/near_shaixuan.xml
+++ b/res/layout/near_shaixuan.xml
@@ -294,13 +294,12 @@
             android:layout_marginBottom="20dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:background="@color/new_color_4" >
+            android:gravity="center_horizontal" >
 
             <RadioGroup
                 android:id="@+id/rgzhiye"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:orientation="horizontal" >
             </RadioGroup>
 
