--- a/res/layout/my_yirenziliaomobanhead.xml
+++ b/res/layout/my_yirenziliaomobanhead.xml
@@ -63,7 +63,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
                         android:layout_marginRight="5dp"
-                        android:text="21"
+                        android:text=" "
                         android:textSize="@dimen/new_size_3"
                         android:textColor="@color/white" />
                 </LinearLayout>
@@ -76,7 +76,7 @@
                     android:layout_weight="1"
                     android:textSize="@dimen/new_size_3"
                         android:textColor="@color/color_3"
-                    android:text="双子座" />
+                    android:text=" " />
 
                 <ImageView
                     android:id="@+id/imageView7"
@@ -90,7 +90,7 @@
                     android:layout_height="wrap_content"
                     android:textSize="@dimen/new_size_2"
                         android:textColor="@color/color_4"
-                    android:text="北京" />
+                    android:text=" " />
 
                 <ImageView
                     android:id="@+id/imageView8"
@@ -106,7 +106,7 @@
                     android:layout_marginRight="10dp"
                     android:textSize="@dimen/new_size_2"
                         android:textColor="@color/color_4"
-                    android:text="8分钟前" />
+                    android:text=" " />
             </LinearLayout>
 
             <LinearLayout
@@ -156,8 +156,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
-                    android:layout_marginRight="5dp"
-                    android:src="@drawable/f10_42" />
+                    android:layout_marginRight="5dp" />
 
                 <TextView
                     android:id="@+id/tvcontent"
@@ -194,7 +193,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
-                    android:layout_marginTop="12dp" >
+                    android:layout_marginTop="12dp"
+                    android:visibility="gone" >
 
                     <TextView
                         android:id="@+id/TextView19"
@@ -214,7 +214,7 @@
                         <TextView
                             android:id="@+id/tvname"
                             style="@style/main_color3_style"
-                            android:text="吴沐熙" />
+                            android:text=" " />
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -251,7 +251,7 @@
                         <TextView
                             android:id="@+id/tvnickname"
                             style="@style/main_color3_style"
-                            android:text="Vicky" />
+                            android:text=" " />
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -289,7 +289,7 @@
                             android:id="@+id/tvage"
                             style="@style/main_color3_style"
                             android:layout_width="match_parent"
-                            android:text="25" />
+                            android:text=" " />
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -326,7 +326,7 @@
                         <TextView
                             android:id="@+id/tvxingzuo1"
                             style="@style/main_color3_style"
-                            android:text="双子座" />
+                            android:text=" " />
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -363,7 +363,7 @@
                         <TextView
                             android:id="@+id/tvzhiye"
                             style="@style/main_color3_style"
-                            android:text="演员" />
+                            android:text=" " />
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -400,7 +400,7 @@
                         <TextView
                             android:id="@+id/tvjiaxiang"
                            style="@style/main_color3_style"
-                            android:text="湖南省阮江市" />
+                            android:text=" " />
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -437,7 +437,7 @@
                         <TextView
                             android:id="@+id/tvheight"
                             style="@style/main_color3_style"
-                            android:text="172cm" />
+                            android:text=" " />
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -474,7 +474,7 @@
                         <TextView
                             android:id="@+id/tvsanwei"
                             style="@style/main_color3_style"
-                            android:text="89,60,95" />
+                            android:text=" " />
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -552,7 +552,7 @@
                             android:layout_height="wrap_content"
                             android:textSize="@dimen/new_size_3"
                         android:textColor="@color/color_2"
-                            android:text="第20届北京大学电影节最佳女主角\n第9届华鼎奖女演员\n第12届华语电影传媒大奖最佳女主角" />
+                            android:text=" " />
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -592,7 +592,7 @@
                             android:layout_height="wrap_content"
                             android:textSize="@dimen/new_size_3"
                         android:textColor="@color/color_2"
-                            android:text="第20届北京大学电影节最佳女主角\n第9届华鼎奖女演员" />
+                            android:text=" " />
 
                         <LinearLayout
                             android:layout_width="match_parent"
