--- a/res/layout/near_list_item.xml
+++ b/res/layout/near_list_item.xml
@@ -10,8 +10,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
-        android:layout_weight="2"
-        android:src="@drawable/f7_03" />
+        android:layout_weight="2" />
 
     <LinearLayout
         android:layout_width="0dp"
@@ -30,7 +29,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="吴沐熙vicky"
+                android:text=" "
                 android:textColor="@color/color_2"
                 android:textSize="@dimen/new_size_4" />
 
@@ -38,7 +37,7 @@
                 android:id="@+id/tvonlinetime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="北京/2分钟前"
+                android:text=" "
                 android:gravity="right"
                 android:textColor="@color/color_4"
                 android:textSize="@dimen/new_size_1" />
@@ -68,7 +67,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
-                android:text="21岁"
+                android:text=" "
                 android:textColor="@color/color_4"
                 android:textSize="@dimen/new_size_3" />
 
@@ -76,7 +75,7 @@
                 android:id="@+id/tvzhiye"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="职业/模特、演员"
+                android:text=" "
                 android:textColor="@color/color_4"
                 android:textSize="@dimen/new_size_3" />
         </LinearLayout>
@@ -87,7 +86,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="2dp"
             android:singleLine="true"
-            android:text="北京电影学院获奖作品《安慰》中女一号"
+            android:text=" "
             android:textColor="@color/color_4"
             android:textSize="@dimen/new_size_3" />
 
