--- a/res/layout/my_age.xml
+++ b/res/layout/my_age.xml
@@ -41,7 +41,7 @@
                     android:layout_margin="20dp"
                     android:layout_weight="1"
                     android:gravity="right"
-                    android:text="12岁"
+                    android:text=" "
                     android:textSize="@dimen/new_size_3" 
                     android:textColor="@color/color_4" />
 
@@ -77,7 +77,7 @@
                     android:layout_margin="20dp"
                     android:layout_weight="1"
                     android:gravity="right"
-                    android:text="天秤座"
+                    android:text=" "
                     android:textSize="@dimen/new_size_3" 
                     android:textColor="@color/color_4" >
 
