--- a/res/layout/my_fansziliaomobanhead.xml
+++ b/res/layout/my_fansziliaomobanhead.xml
@@ -66,7 +66,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
                         android:layout_marginRight="5dp"
-                        android:text="21"
+                        android:text=" "
                         android:textSize="@dimen/new_size_3"
                         android:textColor="@color/white" />
                 </LinearLayout>
@@ -79,7 +79,7 @@
                     android:layout_weight="1"
                     android:textSize="@dimen/new_size_3"
                     android:textColor="@color/color_3"
-                    android:text="双子座" />
+                    android:text=" " />
 
                 <ImageView
                     android:id="@+id/imageView7"
@@ -93,7 +93,7 @@
                     android:layout_height="wrap_content"
                     android:textSize="@dimen/new_size_2"
                     android:textColor="@color/color_4"
-                    android:text="北京" />
+                    android:text=" " />
 
                 <ImageView
                     android:id="@+id/imageView8"
@@ -109,7 +109,7 @@
                     android:layout_marginRight="10dp"
                     android:textSize="@dimen/new_size_2"
                     android:textColor="@color/color_4"
-                    android:text="8分钟前" />
+                    android:text=" " />
 
             </LinearLayout>
 
@@ -162,8 +162,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
-                    android:layout_marginRight="5dp"
-                    android:src="@drawable/f10_42" />
+                    android:layout_marginRight="5dp" />
 
                 <LinearLayout
                     android:layout_width="0dp"
@@ -184,7 +183,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="北京"
+                        android:text=" "
                         android:textColor="@color/color_4"
                     	android:textSize="@dimen/new_size_1" />
 
@@ -217,7 +216,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
-                    android:layout_marginTop="5dp" >
+                    android:layout_marginTop="5dp"
+                    android:visibility="gone" >
 
                     <TextView
                         android:id="@+id/TextView19"
@@ -237,7 +237,7 @@
                         <TextView
                             android:id="@+id/tvname"
                             style="@style/main_color3_style"
-                            android:text="吴沐熙" />
+                            android:text=" " />
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -274,7 +274,7 @@
                         <TextView
                             android:id="@+id/tvnickname"
                             style="@style/main_color3_style"
-                            android:text="Vicky" />
+                            android:text=" " />
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -312,7 +312,7 @@
                             android:id="@+id/tvage"
                             style="@style/main_color3_style"
                             android:layout_width="match_parent"
-                            android:text="25" />
+                            android:text=" " />
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -349,7 +349,7 @@
                         <TextView
                             android:id="@+id/tvxingzuo1"
                             style="@style/main_color3_style"
-                            android:text="双子座" />
+                            android:text=" " />
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -386,7 +386,7 @@
                         <TextView
                             android:id="@+id/tvzhiye"
                             style="@style/main_color3_style"
-                            android:text="演员" />
+                            android:text=" " />
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -423,7 +423,7 @@
                         <TextView
                             android:id="@+id/tvjiaxiang"
                             style="@style/main_color3_style"
-                            android:text="湖南省阮江市" />
+                            android:text=" " />
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -460,7 +460,7 @@
                         <TextView
                             android:id="@+id/tvheight"
                             style="@style/main_color3_style"
-                            android:text="172cm" />
+                            android:text=" " />
 
                         <LinearLayout
                             android:layout_width="match_parent"
