--- a/res/layout/my_fuwunextitem.xml
+++ b/res/layout/my_fuwunextitem.xml
@@ -13,7 +13,7 @@
         android:layout_weight="1"
         android:textColor="@color/color_2"
         android:textSize="@dimen/new_size_2"
-        android:text="拍照1" />
+        android:text=" " />
 
     <EditText
         android:id="@+id/etjiage"
