--- a/res/layout/my_haoyou_item.xml
+++ b/res/layout/my_haoyou_item.xml
@@ -11,8 +11,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
-        android:layout_weight="1"
-        android:src="@drawable/f7_03" />
+        android:layout_weight="1" />
 
     <LinearLayout
         android:layout_width="0dp"
@@ -30,7 +29,7 @@
                 android:id="@+id/tvname"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="吴沐熙vicky"
+                android:text=" "
                 android:textColor="@color/color_2"
                 android:textSize="@dimen/new_size_2" />
 
@@ -47,7 +46,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
-                android:text="21岁"
+                android:text=" "
                 android:textColor="@color/color_4"
                 android:textSize="@dimen/new_size_2" />
         </LinearLayout>
@@ -61,7 +60,7 @@
                 android:id="@+id/tvzhiye"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="通讯录好友吴沐熙"
+                android:text=" "
                 android:textColor="@color/color_4"
                 android:textSize="@dimen/new_size_2" />
         </LinearLayout>
@@ -71,7 +70,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="2dp"
-            android:text="北京"
+            android:text=" "
             android:textColor="@color/color_4"
             android:textSize="@dimen/new_size_2" />
 
