--- a/res/layout/my_wallet.xml
+++ b/res/layout/my_wallet.xml
@@ -23,8 +23,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="10dp"
-                android:layout_weight="15"
-                android:src="@drawable/m23_06" />
+                android:layout_weight="15" />
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -42,7 +41,7 @@
                         android:id="@+id/tvnickname"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="乱世飞尘"
+                        android:text=" "
             			android:textSize="@dimen/new_size_3"
                         android:textColor="@color/white" />
 
@@ -73,7 +72,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
-                        android:text="56"
+                        android:text=" "
             			android:textSize="@dimen/new_size_3"
                         android:textColor="@color/white" />
                 </LinearLayout>
