--- a/res/layout/my_workbaoming_item.xml
+++ b/res/layout/my_workbaoming_item.xml
@@ -10,8 +10,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
-        android:layout_weight="2"
-        android:src="@drawable/f7_03" />
+        android:layout_weight="2" />
 
     <LinearLayout
         android:layout_width="0dp"
@@ -30,7 +29,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="吴沐熙vicky"
+                android:text=" "
                 android:textColor="@color/color_2"
                 android:textSize="@dimen/new_size_3" />
         </LinearLayout>
@@ -59,7 +58,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
-                android:text="21岁"
+                android:text=" "
                 android:textColor="@color/color_4"
                 android:textSize="@dimen/new_size_3" />
 
@@ -67,7 +66,7 @@
                 android:id="@+id/tvzhiye"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="职业/模特、演员"
+                android:text=" "
                 android:textColor="@color/color_4"
                 android:textSize="@dimen/new_size_3" />
         </LinearLayout>
@@ -78,7 +77,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="2dp"
             android:singleLine="true"
-            android:text="北京电影学院获奖作品《安慰》中女一号"
+            android:text=" "
             android:textColor="@color/color_4"
             android:textSize="@dimen/new_size_3" />
 
