--- a/res/layout/my_workdialog.xml
+++ b/res/layout/my_workdialog.xml
@@ -10,8 +10,7 @@
         android:id="@+id/imageView1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:src="@drawable/c12_03" />
+        android:layout_margin="10dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -25,7 +24,7 @@
             android:id="@+id/textView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="今年20岁杨坤演唱会"
+            android:text=" "
             android:textColor="@color/bt_light_red"
             android:textSize="@dimen/new_size_1" />
 
@@ -45,7 +44,7 @@
             android:layout_marginLeft="5dp"
             android:layout_weight="1"
             android:gravity="right"
-            android:text="2014年12月16日"
+            android:text=" "
             android:textColor="@color/color_4"
             android:textSize="@dimen/new_size_1" />
     </LinearLayout>
