--- a/res/layout/my_workdialog_item.xml
+++ b/res/layout/my_workdialog_item.xml
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_weight="1"
-            android:text="迎宾美女"
+            android:text=" "
             android:textColor="@color/color_3"
             android:textSize="@dimen/new_size_4" />
 
@@ -41,7 +41,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="8dp"
-                android:text="245位报名"
+                android:text=" "
                 android:textSize="@dimen/new_size_4"
                 android:textColor="@color/white" />
         </LinearLayout>
