--- a/res/layout/my_xingtanziliaobianjihead.xml
+++ b/res/layout/my_xingtanziliaobianjihead.xml
@@ -65,7 +65,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
                         android:layout_marginRight="5dp"
-                        android:text="21"
+                        android:text=" "
                 android:textSize="@dimen/new_size_3"
                         android:textColor="@color/white" />
                 </LinearLayout>
@@ -78,7 +78,7 @@
                     android:layout_weight="1"
                     android:textColor="@color/color_3"
                 android:textSize="@dimen/new_size_3"
-                    android:text="双子座" />
+                    android:text=" " />
 
                 <ImageView
                     android:id="@+id/imageView7"
@@ -92,7 +92,7 @@
                     android:layout_height="wrap_content"
                     android:textColor="@color/color_4"
                 android:textSize="@dimen/new_size_2"
-                    android:text="北京" />
+                    android:text=" " />
 
                 <ImageView
                     android:id="@+id/imageView8"
@@ -108,7 +108,7 @@
                     android:layout_marginRight="10dp"
                     android:textColor="@color/color_4"
                 android:textSize="@dimen/new_size_2"
-                    android:text="8分钟前" />
+                    android:text=" " />
             </LinearLayout>
 
             <LinearLayout
@@ -158,8 +158,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
-                    android:layout_marginRight="5dp"
-                    android:src="@drawable/f10_42" />
+                    android:layout_marginRight="5dp" />
 
                 <LinearLayout
                     android:layout_width="0dp"
@@ -180,7 +179,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="北京"
+                        android:text=" "
                         android:textColor="@color/color_4"
                     	android:textSize="@dimen/new_size_1" />
                 </LinearLayout>
@@ -320,7 +319,7 @@
                             android:id="@+id/tvage"
                             style="@style/main_color3_style"
                             android:layout_width="match_parent"
-                            android:text="25" />
+                            android:text=" " />
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -357,7 +356,7 @@
                         <TextView
                             android:id="@+id/tvxingzuo1"
                             style="@style/main_color3_style"
-                            android:text="双子座" />
+                            android:text=" " />
 
                         <LinearLayout
                             android:layout_width="match_parent"
