--- a/res/layout/my_xingtanziliaomobanhead.xml
+++ b/res/layout/my_xingtanziliaomobanhead.xml
@@ -65,7 +65,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
                         android:layout_marginRight="5dp"
-                        android:text="21"
+                        android:text=" "
                         android:textSize="@dimen/new_size_3"
                         android:textColor="@color/white" />
                 </LinearLayout>
@@ -78,7 +78,7 @@
                     android:layout_weight="1"
                     android:textSize="@dimen/new_size_3"
                         android:textColor="@color/color_3"
-                    android:text="双子座" />
+                    android:text=" " />
 
                 <ImageView
                     android:id="@+id/imageView7"
@@ -92,7 +92,7 @@
                     android:layout_height="wrap_content"
                     android:textSize="@dimen/new_size_2"
                         android:textColor="@color/color_4"
-                    android:text="北京" />
+                    android:text=" " />
 
                 <ImageView
                     android:id="@+id/imageView8"
@@ -108,7 +108,7 @@
                     android:layout_marginRight="10dp"
                     android:textSize="@dimen/new_size_2"
                         android:textColor="@color/color_4"
-                    android:text="8分钟前" />
+                    android:text=" " />
             </LinearLayout>
 
             <LinearLayout
@@ -160,8 +160,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
-                    android:layout_marginRight="5dp"
-                    android:src="@drawable/f10_42" />
+                    android:layout_marginRight="5dp" />
 
                 <LinearLayout
                     android:layout_width="0dp"
@@ -182,7 +181,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="北京"
+                        android:text=" "
                         android:textColor="@color/color_4"
                     	android:textSize="@dimen/new_size_1" />
                 </LinearLayout>
@@ -215,7 +214,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
-                    android:layout_marginTop="5dp" >
+                    android:layout_marginTop="5dp"
+                    android:visibility="gone" >
 
                     <TextView
                         android:id="@+id/TextView19"
@@ -235,7 +235,7 @@
                         <TextView
                             android:id="@+id/tvname"
                             style="@style/main_color3_style"
-                            android:text="吴沐熙" />
+                            android:text=" " />
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -272,7 +272,7 @@
                         <TextView
                             android:id="@+id/tvnickname"
                             style="@style/main_color3_style"
-                            android:text="Vicky" />
+                            android:text=" " />
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -309,7 +309,7 @@
                         <TextView
                             android:id="@+id/tvage"
                             style="@style/main_color3_style"
-                            android:text="25" />
+                            android:text=" " />
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -346,7 +346,7 @@
                         <TextView
                             android:id="@+id/tvxingzuo1"
                             style="@style/main_color3_style"
-                            android:text="双子座" />
+                            android:text=" " />
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -383,7 +383,7 @@
                         <TextView
                             android:id="@+id/tvzhiye"
                             style="@style/main_color3_style"
-                            android:text="演员" />
+                            android:text=" " />
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -420,7 +420,7 @@
                         <TextView
                             android:id="@+id/tvjiaxiang"
                             style="@style/main_color3_style"
-                            android:text="湖南省阮江市" />
+                            android:text=" " />
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -457,7 +457,7 @@
                         <TextView
                             android:id="@+id/tvheight"
                             style="@style/main_color3_style"
-                            android:text="172cm" />
+                            android:text=" " />
 
                         <LinearLayout
                             android:layout_width="match_parent"
