--- a/res/layout/my_yirenwork_item.xml
+++ b/res/layout/my_yirenwork_item.xml
@@ -10,8 +10,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
-        android:layout_weight="1"
-        android:src="@drawable/f3_11" />
+        android:layout_weight="1" />
 
     <LinearLayout
         android:layout_width="0dp"
