--- a/res/layout/near_xingtanxiangqingmobanhead.xml
+++ b/res/layout/near_xingtanxiangqingmobanhead.xml
@@ -79,7 +79,7 @@
                     android:layout_weight="1"
                     android:textColor="@color/color_3"
             		android:textSize="@dimen/new_size_3"
-                    android:text="双子座" />
+                    android:text=" " />
 
                 <ImageView
                     android:id="@+id/imageView7"
@@ -91,7 +91,7 @@
                     android:id="@+id/tvdizhi"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="北京"
+                    android:text=" "
                     android:textColor="@color/color_4"
             		android:textSize="@dimen/new_size_2" />
 
@@ -107,7 +107,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="10dp"
-                    android:text="8分钟前"
+                    android:text=" "
                     android:textColor="@color/color_4"
             		android:textSize="@dimen/new_size_2" />
             </LinearLayout>
@@ -161,8 +161,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
-                    android:layout_marginRight="5dp"
-                    android:src="@drawable/f10_42" />
+                    android:layout_marginRight="5dp" />
 
                 <LinearLayout
                     android:layout_width="0dp"
@@ -183,7 +182,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="北京"
+                        android:text=" "
                         android:textColor="@color/color_4"
                         android:textSize="@dimen/new_size_1" />
 
@@ -237,7 +236,7 @@
                         <TextView
                             android:id="@+id/tvname"
                             style="@style/main_color3_style"
-                            android:text="吴沐熙" />
+                            android:text=" " />
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -274,7 +273,7 @@
                         <TextView
                             android:id="@+id/tvnickname"
                             style="@style/main_color3_style"
-                            android:text="Vicky" />
+                            android:text=" " />
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -311,7 +310,7 @@
                         <TextView
                             android:id="@+id/tvage"
                             style="@style/main_color3_style"
-                            android:text="25" />
+                            android:text=" " />
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -348,7 +347,7 @@
                         <TextView
                             android:id="@+id/tvxingzuo1"
                             style="@style/main_color3_style"
-                            android:text="双子座" />
+                            android:text=" " />
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -385,7 +384,7 @@
                         <TextView
                             android:id="@+id/tvzhiye"
                             style="@style/main_color3_style"
-                            android:text="演员" />
+                            android:text=" " />
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -422,7 +421,7 @@
                         <TextView
                             android:id="@+id/tvjiaxiang"
                             style="@style/main_color3_style"
-                            android:text="湖南省阮江市" />
+                            android:text=" " />
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -459,7 +458,7 @@
                         <TextView
                             android:id="@+id/tvheight"
                             style="@style/main_color3_style"
-                            android:text="172cm" />
+                            android:text=" " />
 
                         <LinearLayout
                             android:layout_width="match_parent"
