--- a/res/layout/near_yirenxiangqingmobanhead.xml
+++ b/res/layout/near_yirenxiangqingmobanhead.xml
@@ -79,7 +79,7 @@
                     android:layout_weight="1"
                     android:textColor="@color/color_3"
             android:textSize="@dimen/new_size_3"
-                    android:text="双子座" />
+                    android:text=" " />
 
                 <ImageView
                     android:id="@+id/imageView7"
@@ -93,7 +93,7 @@
                     android:layout_height="wrap_content"
                     android:textColor="@color/color_4"
             android:textSize="@dimen/new_size_2"
-                    android:text="北京" />
+                    android:text=" " />
 
                 <ImageView
                     android:id="@+id/imageView8"
@@ -109,7 +109,7 @@
                     android:layout_marginRight="10dp"
                     android:textColor="@color/color_4"
             android:textSize="@dimen/new_size_2"
-                    android:text="8分钟前" />
+                    android:text=" " />
 
             </LinearLayout>
 
@@ -162,8 +162,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
-                    android:layout_marginRight="5dp"
-                    android:src="@drawable/f10_42" />
+                    android:layout_marginRight="5dp" />
 
                 <TextView
                     android:id="@+id/tvcontent"
@@ -201,7 +200,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
-                    android:layout_marginTop="12dp" >
+                    android:layout_marginTop="12dp"
+                    android:visibility="gone" >
 
                     <TextView
                         android:id="@+id/TextView19"
@@ -221,7 +221,7 @@
                         <TextView
                             android:id="@+id/tvname"
                             style="@style/main_color3_style"
-                            android:text="吴沐熙" />
+                            android:text=" " />
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -258,7 +258,7 @@
                         <TextView
                             android:id="@+id/tvnickname"
                             style="@style/main_color3_style"
-                            android:text="Vicky" />
+                            android:text=" " />
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -295,7 +295,7 @@
                         <TextView
                             android:id="@+id/tvage"
                             style="@style/main_color3_style"
-                            android:text="25" />
+                            android:text=" " />
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -332,7 +332,7 @@
                         <TextView
                             android:id="@+id/tvxingzuo1"
                             style="@style/main_color3_style"
-                            android:text="双子座" />
+                            android:text=" " />
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -369,7 +369,7 @@
                         <TextView
                             android:id="@+id/tvzhiye"
                             style="@style/main_color3_style"
-                            android:text="演员" />
+                            android:text=" " />
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -406,7 +406,7 @@
                         <TextView
                             android:id="@+id/tvjiaxiang"
                            style="@style/main_color3_style"
-                            android:text="湖南省阮江市" />
+                            android:text=" " />
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -443,7 +443,7 @@
                         <TextView
                             android:id="@+id/tvheight"
                             style="@style/main_color3_style"
-                            android:text="172cm" />
+                            android:text=" " />
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -480,7 +480,7 @@
                         <TextView
                             android:id="@+id/tvsanwei"
                             style="@style/main_color3_style"
-                            android:text="89,60,95" />
+                            android:text=" " />
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -557,7 +557,7 @@
                             android:layout_height="wrap_content"
                             android:textColor="@color/color_2"
             android:textSize="@dimen/new_size_3"
-                            android:text="第20届北京大学电影节最佳女主角\n第9届华鼎奖女演员\n第12届华语电影传媒大奖最佳女主角" />
+                            android:text=" " />
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -597,7 +597,7 @@
                             android:layout_height="wrap_content"
                             android:textColor="@color/color_2"
             android:textSize="@dimen/new_size_3"
-                            android:text="第20届北京大学电影节最佳女主角\n第9届华鼎奖女演员" />
+                            android:text=" " />
 
                         <LinearLayout
                             android:layout_width="match_parent"
