--- a/res/layout/user_fragment.xml
+++ b/res/layout/user_fragment.xml
@@ -36,8 +36,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="15dp"
                         android:layout_marginRight="10dp"
-                        android:layout_weight="15"
-                        android:src="@drawable/m23_06" />
+                        android:layout_weight="15" />
 
                     <LinearLayout
                         android:layout_width="0dp"
@@ -55,7 +54,7 @@
                                 android:id="@+id/textView1"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="乱世飞尘"
+                                android:text=" "
                                 android:textColor="@color/color_2" />
 
                             <ImageView
@@ -90,7 +89,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="5dp"
-                                android:text="56"
+                                android:text=" "
                                 android:textColor="@color/color_3" />
 
                         </LinearLayout>
@@ -131,7 +130,7 @@
                             android:id="@+id/textView4"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="226"
+                            android:text=" "
                             android:textColor="@color/color_3" />
 
                         <TextView
@@ -157,7 +156,7 @@
                             android:id="@+id/textView6"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="123"
+                            android:text=" "
                             android:textColor="@color/color_3" />
 
                         <TextView
@@ -183,7 +182,7 @@
                             android:id="@+id/textView8"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="145"
+                            android:text=" "
                             android:textColor="@color/color_3" />
 
                         <TextView
@@ -216,7 +215,7 @@
                             android:id="@+id/textView10"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="46"
+                            android:text=" "
                             android:textColor="@color/color_3" />
 
                     </LinearLayout>
