服务模块 添加动态职业

--- a/res/layout/my_fuwu.xml
+++ b/res/layout/my_fuwu.xml
@@ -39,48 +39,17 @@
 
                 </GridView>
 
-                <RadioGroup
-                    android:id="@+id/radioGroup"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
-                    android:layout_marginTop="10dp"
-                    android:contentDescription="职位"
-                    android:orientation="horizontal" >
+  			<RadioGroup
+  			    android:id="@+id/rgzhiye"
+  			    android:layout_width="match_parent"
+  			    android:layout_height="wrap_content"
+  			    android:layout_marginBottom="10dp"
+  			    android:layout_marginLeft="20dp"
+  			    android:layout_marginRight="20dp"
+  			    android:layout_marginTop="10dp"
+  			    android:orientation="horizontal" >
 
-                    <RadioButton
-                        android:id="@+id/radioButton1"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:background="@drawable/btn_mote"
-                        android:button="@null"
-                        android:textColor="@color/color_4"
-                        android:textSize="@dimen/new_size_2" />
-
-                    <RadioButton
-                        android:id="@+id/radioButton2"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:background="@drawable/btn_geshou"
-                        android:button="@null"
-                        android:textColor="@color/color_4"
-                        android:textSize="@dimen/new_size_2" />
-
-                    <RadioButton
-                        android:id="@+id/radioButton3"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:background="@drawable/btn_yanyuan"
-                        android:button="@null"
-                        android:checked="true"
-                        android:textColor="@color/color_4"
-                        android:textSize="@dimen/new_size_2" />
-                </RadioGroup>
+            </RadioGroup>
             </LinearLayout>
 
             <GridView
