--- a/res/layout/my_chongzhifangshi.xml
+++ b/res/layout/my_chongzhifangshi.xml
@@ -96,6 +96,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
+            android:visibility="gone"
             android:orientation="vertical" >
 
             <LinearLayout
