--- a/res/layout/dynamic_list_item.xml
+++ b/res/layout/dynamic_list_item.xml
@@ -13,7 +13,8 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="5dp"
-        android:src="@drawable/dynamic_head_xh" />
+         />
+        <!--android:src="@drawable/dynamic_head_xh"-->
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -30,7 +31,7 @@
                 android:id="@+id/tv_dynamic_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="我在等你"
+                android:text=""
                 android:textColor="@color/color_4"
                 android:textSize="@dimen/new_size_2" />
 
@@ -54,7 +55,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="5dp"
-                android:text="21"
+                android:text=""
                 android:textColor="@color/color_4"
                 android:textSize="@dimen/new_size_1" />
 
@@ -62,7 +63,7 @@
                 android:id="@+id/tv_dynamic_constella"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="双子座"
+                android:text=""
                 android:textColor="@color/color_4"
                 android:textSize="@dimen/new_size_1" />
         </LinearLayout>
@@ -72,7 +73,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="@string/dynamic_text1"
+            android:text=""
             android:textColor="@color/color_2"
             android:textSize="@dimen/new_size_2" />
 
@@ -116,7 +117,7 @@
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="3dp"
                     android:layout_toRightOf="@+id/iv_dynamic_time"
-                    android:text="10分钟前"
+                    android:text=""
                     android:textColor="@color/color_4"
                     android:textSize="@dimen/new_size_1" />
 
