--- a/res/layout/main_top_find_layout.xml
+++ b/res/layout/main_top_find_layout.xml
@@ -7,13 +7,12 @@
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" 
-        android:background="@drawable/c_03"
-        android:layout_marginLeft="10dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_toLeftOf="@+id/main_top_find_right"
+        android:layout_marginLeft="10dp"
         android:layout_marginRight="5dp"
-        >
+        android:layout_toLeftOf="@+id/main_top_find_right"
+        android:background="@drawable/c_03" >
 
         <ImageView
             android:id="@+id/main_top_find_query"
@@ -22,21 +21,21 @@
             android:layout_marginLeft="10dp"
             android:padding="5dp"
             android:src="@drawable/f9_06" />
-        
+
         <EditText
             android:id="@+id/main_top_find_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@null"
             android:ems="10"
             android:singleLine="true"
-            android:background="@null"
-            android:layout_gravity="center"
             android:textColor="@color/color_1"
             android:textSize="@dimen/new_size_3" >
+
             <requestFocus />
         </EditText>
     </LinearLayout>
-
 
     <ImageView
         android:id="@+id/main_top_find_right"
@@ -48,5 +47,20 @@
         android:layout_marginRight="5dp"
         android:gravity="center"
         android:src="@drawable/c_05" />
+
+    <Button
+        android:id="@+id/main_top_find_right2"
+        android:layout_width="60dp"
+        android:layout_height="32dp"
+        android:layout_marginRight="5dp"
+        android:layout_alignParentRight="true"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="false"
+        android:background="@drawable/chat_send_btn_selector"
+        android:onClick="onClick"
+        android:text="确定"
+        android:textColor="#666666"
+        android:textSize="16sp"
+        android:visibility="visible" />
 
 </RelativeLayout>
