--- a/res/layout/near_xiangqingmobantail.xml
+++ b/res/layout/near_xiangqingmobantail.xml
@@ -8,26 +8,61 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
-        <ImageView
-            android:id="@+id/imgduihua"
+        <LinearLayout
+            android:id="@+id/lduihua"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@drawable/f10_52" />
+            android:background="@drawable/backhei"
+            android:gravity="center" >
 
-        <ImageView
-            android:id="@+id/imgguanzhu"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@drawable/f10_53" />
+            <TextView
+                android:id="@+id/textView1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:textSize="@dimen/new_size_3"
+                android:drawableLeft="@drawable/iconliaotian"
+                android:text="对话" />
 
-        <ImageView
-            android:id="@+id/imgyuyue"
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/lguanzhu"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@drawable/f10_54" />
+            android:background="@drawable/backhong"
+            android:gravity="center" >
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:textSize="@dimen/new_size_3"
+                android:drawableLeft="@drawable/iconadd"
+                android:text="关注" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/lyuyue"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/backlan"
+            android:gravity="center" >
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:textSize="@dimen/new_size_3"
+                android:text="工作预约" />
+
+        </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
