--- a/res/layout/my_chongzhi.xml
+++ b/res/layout/my_chongzhi.xml
@@ -97,14 +97,16 @@
                     android:id="@+id/textView4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="客户编号:" />
+                    android:text="客户编号:"
+                    android:visibility="gone" />
 
                 <TextView
                     android:id="@+id/tvid"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="15dp"
-                    android:text="" />
+                    android:text=""
+                    android:visibility="gone" />
 
             </LinearLayout>
 
