--- a/res/layout/my_fansziliaobianjihead.xml
+++ b/res/layout/my_fansziliaobianjihead.xml
@@ -127,7 +127,8 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="10dp"
-                android:gravity="center_vertical" >
+                android:gravity="center_vertical"
+                android:visibility="gone" >
 
                 <LinearLayout
                     android:layout_width="wrap_content"
