--- a/res/layout/my_xingtanziliaobianjihead.xml
+++ b/res/layout/my_xingtanziliaobianjihead.xml
@@ -128,7 +128,8 @@
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="10dp"
                 android:layout_weight="1"
-                android:gravity="center_vertical" >
+                android:gravity="center_vertical"
+                android:visibility="gone" >
 
                 <LinearLayout
                     android:layout_width="wrap_content"
